--- a/src/input.css
+++ b/src/input.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
     :root {
         --color-neutral-50: theme('colors.gray.50');
@@ -63,5 +62,14 @@
     --primaryBg: var(--color-primary-100);
     --onPrimaryBg: var(--color-primary-900);
     --primary: var(--color-primary-500);
+    --h1Text: var(--color-primary-300);
+}
+
+.theme-dark {
+    --neutralBg: var(--color-neutral-900);
+    --onNeutralBg: theme('colors.white');
+    --primaryBg: var(--color-primary-900);
+    --onPrimaryBg: var(--color-primary-50);
+    --primary: var(--color-primary-400);
     --h1Text: var(--color-primary-300);
 }
